2002-08-07  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/style.c (sp_style_merge_from_object_parent): Inherit font size (still wrong)

	* src/text-context.c (sp_text_context_root_handler): Allow control key
	to be passed, send nonbreaking space for Ctrl+Space

	* src/sp-text.c (sp_string_set_shape): Try to collect spaces across item boundaries
	(sp_tspan_set_shape): Ditto
	(sp_text_set_shape): Ditto

2002-08-05  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/text-context.c (sp_text_context_root_handler): Use sp_text_append

	* src/sp-text.c (sp_text_append): New method

2002-07-31  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/text-context.c (sp_text_context_finalize): Use it instead of ::destroy
	(sp_text_context_setup): Create cursor
	(sp_text_context_root_handler): Show cursor
	(sp_text_context_selection_changed): Update cursor
	(sp_text_context_timeout): Blink handler

	* src/text-context.h: Added cursor

2002-07-30  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/Makefile.am (sodipodi_SOURCES): Added macros.h

	* src/sp-text.c (sp_text_write_transform): Do multiline transforming
	the right way

	* src/macros.h: New file for useful macros

2002-07-29  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/sp-text.c (sp_tspan_build): Get attributes at right place, read role as well
	(sp_tspan_read_attr): Parse "sodipodi:role" attribute
	(sp_text_append_line): New method

	* src/sp-text.h: Specify role for <tspan> element

2002-07-26  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/sp-text.c (sp_string_set_shape): Changed signature, pass layout and currentpoint
	(sp_tspan_set_shape): New method
	(sp_text_build): Use normal order, as shape will be set asynchronously
	(sp_text_read_attr): Request update everywhere
	(sp_text_child_added): Fix bug, now keep old children in list
	(sp_text_set_shape): New method, nothing interesting yet

	* src/text-context.c (sp_text_context_selection_changed): Set active object
	to NULL, if nothing selected
