@@ -107,6 +107,8 @@ struct _SPText {
 	SPLayoutData ly;
 
 	SPObject *children;
+
+	guint relayout : 1;
 };
 
 struct _SPTextClass {
